# pdbsql

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  TODO.md
.github/workflows/: build.yml
prompts/: pdbsql_agent.md
scripts/: embed_prompt.py
src/cli/: CMakeLists.txt  http_mode.cpp  http_mode.hpp  main.cpp  mcp_mode.cpp  mcp_mode.hpp  query_json.hpp  remote_mode.cpp  remote_mode.hpp  table_printer.hpp
src/common/: agent_settings.hpp  ai_agent.cpp  ai_agent.hpp  http_server.cpp  http_server.hpp  mcp_server.cpp  mcp_server.hpp  pdbsql_agent_prompt.hpp  pdbsql_commands.hpp
src/include/: dia_helpers.hpp  pdb_session.hpp  pdb_tables.hpp  pdb_vtable.hpp  server_query_dispatcher.hpp
src/test/: run_tests.py
tests/: CMakeLists.txt  test_pdb_session.cpp  test_pdb_tables.cpp  test_server_serialization.cpp
tests/testdata/: CMakeLists.txt  test_program.cpp
